[tool.poetry]
name = "buscacep"
version = "0.1.0"
description = ""
authors = ["Adalberto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.44.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false

